--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -1,20 +1,32 @@
-name: Deploy la Firebase Hosting
-
+name: Build and Deploy
 on:
   push:
     branches:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
 
-      # Pasul de setup-node și npm install/build sunt eliminați
-      
-  - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: dist
+      - uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
         env:
