--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -1,10 +1,3 @@
-name: Deploy to Firebase Hosting
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,8 +9,7 @@ jobs:
           node-version: '14' # Alege versiunea de Node.js necesară proiectului tău
       - name: Install Dependencies
         run: npm install
-      - name: Build # Omit this step if your project does not require a build step
-        run: npm run build
+      # Pasul următor a fost eliminat pentru a evita eroarea
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
